chore: update swagger docs.
